--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "1.4.7",
     "cors": "2.8.5",
+    "ejs": "^3.1.10",
     "express": "4.21.2",
+    "jsonwebtoken": "9.0.2",
     "pg": "8.13.1",
     "zod": "3.24.1"
   },
